@@ -211,6 +211,7 @@
  \alias{getCommonPrefix}
  \alias{mergeByCommonTails}
  \alias{splitByCommonTails}
+ \alias{newEnvEval}
 
 
  \description{
